For custom dialog, doesn't work
inputField returns null

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TodoList</string>
+    <string name="app_name">To-Do List</string>
+    <string name="add_item">What do you want to do?</string>
 </resources>
